--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,10 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; connect-src 'self' https://api.airtable.com https://generativelanguage.googleapis.com; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; script-src 'self';"
+          "value": "default-src 'self'; connect-src 'self' https://api.airtable.com https://generativelanguage.googleapis.com; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';"
         }
       ]
     }
   ]
 }
+
