Improve AI env guidance and sample config

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-# === Server-only secrets (never commit real values) ===
-# Google Generative Language API (Gemini)
-GEMINI_API_KEY=
+# Gemini
+GEMINI_API_KEY=your-gemini-api-key
 
-# Airtable REST credentials
-AIRTABLE_API_KEY=
-AIRTABLE_BASE_ID=
-# Optional: override default table name
-AIRTABLE_TABLE_RESUMES=Resumes
-
-# Deployment context (set automatically on Vercel)
-# VERCEL_ENV=development|preview|production
+# Airtable (optional: AI生成のみなら未設定でオンメモリ保存)
+AIRTABLE_TOKEN=your-airtable-token
+AIRTABLE_BASE_ID=appXXXXXXXXXXXXXX
+AIRTABLE_TABLE_RESUME=Resumes
+AIRTABLE_TABLE_EDUCATION=Education
+AIRTABLE_TABLE_WORK=Work
